# Arduino_DHBW_Spiel

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_latex.yml  build_pages.yml
Blackjack/: CMakeLists.txt  runcmake.sh
Blackjack/include/: blackjack.hpp
Blackjack/src/: blackjack.cpp  main.cpp
Code/Game_Logic/include/: logic.hpp
Code/Game_Logic/src/: logic.cpp  main.cpp
Design_Description/Project_Description/: DOC_DED_PD_Project_Descriptio.md  DOC_DED_PD_Project_Description.md
Design_Description/Software_Architecture/: DOC_DED_SOA_Software_Architecture.md  Software_Architecture.md
Design_Description/System_Architecture/: DOC_DED_SYA_System_Architecture.md
Engineering/: DOC_ENG_DA_Additional_Drawings_and_Datasheets.md  DOC_ENG_TA_Trades_Analysis.md
Engineering/COD_ENG_CALC_calculators/: color_calculator.cpp
Engineering/COD_ENG_OUT_Pruefgeraet/src/: main.cpp
Engineering/COD_ENG_OUT_arduino_code/include/: defines.hpp
Engineering/COD_ENG_OUT_arduino_code/lib/ASL/: ASL.cpp  ASL.hpp
Engineering/COD_ENG_OUT_arduino_code/lib/Game_Logic/: CMakeLists.txt  logic.cpp  logic.hpp  main.cpp  runcmake.sh
Engineering/COD_ENG_OUT_arduino_code/lib/Game_Logic/test/: 000-Main.cpp  001-TestCase.cpp  002-TestCase.cpp  CMakeLists.txt
Engineering/COD_ENG_OUT_arduino_code/src/: animations.cpp  interupt.cpp  main.cpp
Engineering/COD_ENG_OUT_arduino_code/test/: 001-TestCase_Requirements.cpp  002-TestCase_ComputerPlayer.cpp  003-TestCase_ManuelPlayer.cpp  CMakeLists.txt  marked_dice.hpp
Management_Development/Configuration_Management/: DOC_MAD_COM_Configuration_Management.md
Management_Development/Cost_Risk_Opportunities/: DOC_MAD_CRO_Cost_Risk_Opportunities.md
Management_Development/Schedule/: DOC_MAD_SH_Schedule.md  Schedule.md
Management_Development/coding_rules/: DOC_MAD_SR_coding_rules.md  DOC_MAD_SR_coding_rules.tex  coding_rules.md  coding_rules.tex  titlepage.tex
Requirements/: DOC_REQ_RE_Requirements.md
StudentAergereDichNicht/Design_Description/Software_Architecture/: DOC_DED_SOA_Software_Architecture.md
StudentAergereDichNicht/Design_Description/System_Architecture/: DOC_DED_SYA_System_Architecture.md
StudentAergereDichNicht/Engineering/: DOC_ENG_DA_Additional_Drawings_and_Datasheets.md
StudentAergereDichNicht/Engineering/COD_ENG_OUT_Pruefgeraet/src/: main.cpp
StudentAergereDichNicht/Engineering/COD_ENG_OUT_arduino_code/: platformio.ini
StudentAergereDichNicht/Engineering/COD_ENG_OUT_arduino_code/include/: defines.hpp
StudentAergereDichNicht/Engineering/COD_ENG_OUT_arduino_code/lib/ASL/: ASL.hpp
StudentAergereDichNicht/Engineering/COD_ENG_OUT_arduino_code/lib/Game_Logic/: logic.hpp
StudentAergereDichNicht/Engineering/COD_ENG_OUT_arduino_code/src/: interupt.cpp  main.cpp
StudentAergereDichNicht/Engineering/COD_ENG_OUT_arduino_code/test/: 001-TestCase_Requirements.cpp  002-TestCase_ComputerPlayer.cpp  003-TestCase_Session_and_Player.cpp  CMakeLists.txt  marked_dice.hpp  runcmake.sh
StudentAergereDichNicht/Management_Development/Configuration_Management/: DOC_MAD_COM_Configuration_Management.md
StudentAergereDichNicht/Management_Development/coding_rules/: DOC_MAD_SR_coding_rules.md
StudentAergereDichNicht/docs/: env_setup.sh  remove_docs.sh
Test_Specification_Report/: DOC_TES_CAS_Test_Cases.md
docs/: copy_docs.sh  launch_site.sh  mkdocs.yml
